--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=4000
-JWT_SECRET=your-secret-key
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+MONGODB_URI=mongodb+srv://7nabhanvnazar7_db_user:o9Zybcp9lYydfdEh@cluster0.szkjvaz.mongodb.net/?appName=Cluster0
